testsuite/tests/overloadedrecflds/should_compile/OverloadedRecFlds10_A.hs
{-# LANGUAGE TypeFamilies #-}
module OverloadedRecFlds10_A where

data family F a
data instance F Int = MkFInt { foo :: Int }
