testsuite/tests/overloadedrecflds/should_fail/T14953_A.hs
{-# LANGUAGE DuplicateRecordFields #-}
module T14953_A where
data R = R {unR :: Int}
